--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -55,7 +55,7 @@
 		    <div class="menu">
 		        <ul>
 		        	<li>
-		                <a class="menuFA" href="javascript:void(0)" onclick="menuCAClick('tgls/qdAPI.html',this)"><i class="iconfont icon-zhishi left"></i>前端API</a>
+		                <a class="menuFA" href="javascript:void(0)" onclick="menuCAClick('user',this)"><i class="iconfont icon-zhishi left"></i>前端API</a>
 		            </li>
 		        	<li>
 		                <a class="menuFA" href="javascript:void(0)" onclick="menuCAClick('tgls/iconfont.html',this)"><i class="iconfont icon-huojian left"></i>iconfont字体库</a>
